# LimeWireLite

./: README.md
code/: Cargo.toml  build.rs
code/proto/: p2p-server.proto
code/src/: client.rs  server.rs
code/testing/helpers/: all_config.ini  linear_config.ini
code/testing/scripts/: file_mod.sh  initial_data.sh  make_data.sh  perf.sh
