[package]
name = "p2pft"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the gRPC server
name = "p2p-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "p2p-client"
path = "src/client.rs"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mac_address = "1.1.2"
local-ip-address = "0.4.4"
unzip-n = "0.1.2"
rand = "0.8.0"
configparser = "2.1.0"
itertools = "0.10"

[build-dependencies]
tonic-build = "0.5"
